[gd_scene load_steps=14 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.00784314, 0.305882, 0.921569, 1 )

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -16.1173, 0, -16.0479, 0, 0, 0, 0, 0, 0, 15.9751, 0, -16.1216, 0, 0, 0, 0, 0, 0, 15.9641, 0, 15.959, 0, 0, 0, 0, 0, 0, -16.0407, 0, 16.0223, 0, 0, 0, 0, 0, 0, -16.1173, 0, -16.0479 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.001, 15, 14 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.642788, 0.766045, 0, -0.766045, 0.642788, 0, 0, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19 )
projection = 1
size = 19.0

[node name="Cylinders" type="Spatial" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, -16 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 16 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, -16 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 16 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 5 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.1173, 0, -16.0479 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )

[node name="ScoreLabel" type="Label" parent="UserInterface"]
margin_left = 32.0
margin_top = 32.0
margin_right = 83.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.298039, 0.109804, 0.109804, 1 )
text = "Score: 0"
script = ExtResource( 5 )

[node name="Retry" type="ColorRect" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )

[node name="Label" type="Label" parent="UserInterface/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -14.0
margin_right = 107.0
margin_bottom = 14.0
text = "Press Enter to retry"

[node name="LimitWalls" type="StaticBody" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="LimitWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 1, 2 )
shape = SubResource( 8 )

[node name="CollisionShape3" type="CollisionShape" parent="LimitWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 1, 2 )
shape = SubResource( 8 )

[node name="CollisionShape4" type="CollisionShape" parent="LimitWalls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, 15 )
shape = SubResource( 8 )

[node name="CollisionShape5" type="CollisionShape" parent="LimitWalls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, -11 )
shape = SubResource( 8 )

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
